# cyber-wallet-generator

./: Cargo.toml  README.md
src/: generator.rs  main.rs
