[package]
name = "cyber-wallet-generator"
version = "0.1.0"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "CLI address generator for cyber blockchain"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/CipherDogs/cyber-wallet-generator"
repository = "https://github.com/CipherDogs/cyber-wallet-generator"
keywords = ["address", "blockchain", "cyber"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
cyber = "0.1.3"
