[package]
name = "cyber-wallet-generator"
version = "0.1.1"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "CLI address generator for cyber blockchain"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/CipherDogs/cyber-wallet-generator"
repository = "https://github.com/CipherDogs/cyber-wallet-generator"
keywords = ["address", "blockchain", "cyber"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
cyber = "0.1.3"

[package.metadata.deb]
maintainer = "DEADBLACKCLOVER <deadblackclover@protonmail.com>"
copyright = "2020, DEADBLACKCLOVER <deadblackclover@protonmail.com>"
license-file = ["LICENSE", "0"]
extended-description = "CLI address generator for cyber blockchain"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/cyber-wallet-generator", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/cyber-wallet-generator/README", "644"],
]
